# ebay_tracker

./: .gitignore  README.md  alerts.py  main.py  pyproject.toml  requirements.txt  utils.py  watchlist.example.yaml
.github/workflows/: tests.yml
tests/: test_alerts.py  test_utils.py
